--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,19 @@ nav {
     text-decoration: none;
     color: #FF008E;
 }
+
+
+/* gallery  */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.gallery img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border: 3px solid #FF008E;
+}
