banner section and photo size bug fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,10 @@ footer {
         grid-template-columns: 1fr;
     }
 
+    .photo {
+        align-items: center;
+    }
+
     .photo img {
         max-width: 350px;
     }
