--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 30px;
 }
@@ -22,6 +22,19 @@ body {
 .highlight {
     color: #FF008E;
 }
+
+.section-title {
+    text-align: center;
+}
+
+.section-title h2 {
+    font-size: 40px;
+    display: inline-block;
+    text-transform: uppercase;
+    border-bottom: 2px solid #FF008E;
+    margin: 50px 0;
+}
+
 
 .primary-button {
     outline: 0;
@@ -117,18 +130,6 @@ nav {
 }
 
 /* feature */
-.section-title {
-    text-align: center;
-}
-
-.section-title h2 {
-    font-size: 40px;
-    display: inline-block;
-    text-transform: uppercase;
-    border-bottom: 2px solid #FF008E;
-    margin: 50px 0;
-}
-
 .feature {
     display: grid;
     grid-gap: 30px;
@@ -151,6 +152,7 @@ nav {
     width: 30px;
     height: 30px;
     padding: 10px;
+    color: #fff;
 }
 
 .card h3 {
@@ -177,7 +179,7 @@ nav {
     gap: 30px;
 }
 
-.gallery img {
+.photo img {
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -283,7 +285,7 @@ footer {
         align-items: center;
         background-color: #fff;
         padding: 20px 0;
-        transform: translateY(-330px);
+        transform: translateY(-415px);
         transition: .5s ease-in-out;
     }
 
